--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,5 @@ services:
       - "5432:5432"
     environment:
       - POSTGRES_DB=db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
